--- a/Manpower_MVC/Web.config
+++ b/Manpower_MVC/Web.config
@@ -15,14 +15,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <pages validateRequest="false"/>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  <httpHandlers>
+    <httpHandlers>
 			<add verb="GET" path="routejs.axd" type="RouteJs.RouteJsHandler, RouteJs" />
-		</httpHandlers></system.web>
+		</httpHandlers>
+  </system.web>
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
