--- a/Manpower_MVC/Web.config
+++ b/Manpower_MVC/Web.config
@@ -7,7 +7,8 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <section name="routeJs" type="RouteJs.RouteJsConfigurationSection, RouteJs" /></configSections>
+    <section name="routeJs" type="RouteJs.RouteJsConfigurationSection, RouteJs" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -15,15 +16,15 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <pages validateRequest="false"/>
+    <pages validateRequest="false" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <httpHandlers>
-			<add verb="GET" path="routejs.axd" type="RouteJs.RouteJsHandler, RouteJs" />
-		</httpHandlers>
+      <add verb="GET" path="routejs.axd" type="RouteJs.RouteJsHandler, RouteJs" />
+    </httpHandlers>
   </system.web>
   <system.webServer>
     <handlers>
@@ -31,7 +32,9 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    <remove name="RouteJs" /><add name="RouteJs" verb="GET" path="routejs.axd" type="RouteJs.RouteJsHandler, RouteJs" preCondition="integratedMode" /></handlers>
+      <remove name="RouteJs" />
+      <add name="RouteJs" verb="GET" path="routejs.axd" type="RouteJs.RouteJsHandler, RouteJs" preCondition="integratedMode" />
+    </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
@@ -83,9 +86,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ManpowerDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ManpowerDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ManpowerDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ManpowerDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-<!--
+  <!--
 		exposeAllRoutes: Sets whether to expose all routes to the site. 
 		If true, all routes will be exposed unless explicitly hidden using the [HideRoutesInJavaScript] 
 		attribute on the controller. If false, all routes will be hidden unless explicitly exposed 
@@ -94,4 +97,6 @@
 		lowerCaseUrls: Sets whether urls should be converted to lowercase.
 		If true, urls will be converted to lowercase while preserving route value placeholders.
 		Example: "Posts/{postKey}/Edit" -> "posts/{postKey}/edit"
-	--><routeJs exposeAllRoutes="true" lowerCaseUrls="false" /></configuration>
+	-->
+  <routeJs exposeAllRoutes="true" lowerCaseUrls="false" />
+</configuration>
