--- a/Manpower_MVC/Web.config
+++ b/Manpower_MVC/Web.config
@@ -18,7 +18,7 @@
   <system.web>
     <pages validateRequest="false" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" requestValidationMode="2.0" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
