--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -216,6 +216,9 @@
     <Compile Include="Models\OwnerPayment.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\OwnerPayWork.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\WorkCategory.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -226,6 +229,8 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ViewOwnerPayment.cs" />
+    <Compile Include="ViewModels\ViewOwnerPayWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\ManpowerDB.mdf" />
@@ -516,6 +521,12 @@
     <Content Include="Views\Owner\Index.cshtml" />
     <Content Include="Views\Owner\Create.cshtml" />
     <Content Include="Views\Owner\Edit.cshtml" />
+    <Content Include="Views\OwnerPay\Index.cshtml" />
+    <Content Include="Views\OwnerPay\CreatePayment.cshtml" />
+    <Content Include="Views\OwnerPay\EditPayment.cshtml" />
+    <Content Include="Views\OwnerPay\ListPayWork.cshtml" />
+    <Content Include="Views\OwnerPay\CreatePayWork.cshtml" />
+    <Content Include="Views\OwnerPay\EditPayWork.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -526,9 +537,7 @@
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\OwnerPay\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
