--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -231,6 +231,8 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ViewMonSalary.cs" />
+    <Compile Include="ViewModels\ViewMonSalDetail.cs" />
     <Compile Include="ViewModels\ViewOwnerPayment.cs" />
     <Compile Include="ViewModels\ViewOwnerPayWork.cs" />
     <Compile Include="ViewModels\ViewWorker.cs" />
@@ -525,10 +527,8 @@
     <Content Include="Views\Owner\Index.cshtml" />
     <Content Include="Views\Owner\Create.cshtml" />
     <Content Include="Views\Owner\Edit.cshtml" />
-    <Content Include="Views\OwnerPay\Index.cshtml" />
     <Content Include="Views\OwnerPay\CreatePayment.cshtml" />
     <Content Include="Views\OwnerPay\EditPayment.cshtml" />
-    <Content Include="Views\OwnerPay\ListPayWork.cshtml" />
     <Content Include="Views\OwnerPay\CreatePayWork.cshtml" />
     <Content Include="Views\OwnerPay\EditPayWork.cshtml" />
     <Content Include="Views\WorkList\Index.cshtml" />
@@ -537,6 +537,8 @@
     <Content Include="Views\WorkList\ListWorker.cshtml" />
     <Content Include="Views\WorkList\CreateWorker.cshtml" />
     <Content Include="Views\WorkList\EditWorker.cshtml" />
+    <Content Include="Views\OwnerPay\Index.cshtml" />
+    <Content Include="Views\OwnerPay\ListPayWork.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
