--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -180,6 +180,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\Api\ApiController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
+    <Compile Include="Controllers\EmpSalController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OwnerController.cs" />
     <Compile Include="Controllers\OwnerPayController.cs" />
@@ -231,8 +232,8 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\ViewMonSalary.cs" />
-    <Compile Include="ViewModels\ViewMonSalDetail.cs" />
+    <Compile Include="ViewModels\ViewEmpSal.cs" />
+    <Compile Include="ViewModels\ViewEmpSalDetail.cs" />
     <Compile Include="ViewModels\ViewOwnerPayment.cs" />
     <Compile Include="ViewModels\ViewOwnerPayWork.cs" />
     <Compile Include="ViewModels\ViewWorker.cs" />
@@ -539,6 +540,8 @@
     <Content Include="Views\WorkList\EditWorker.cshtml" />
     <Content Include="Views\OwnerPay\Index.cshtml" />
     <Content Include="Views\OwnerPay\ListPayWork.cshtml" />
+    <Content Include="Views\EmpSal\Index.cshtml" />
+    <Content Include="Views\EmpSal\EmpSalDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
