請款總表 & 請款明細表 unPrint

--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -567,6 +567,8 @@
     <Content Include="Views\Owner\EditOwnerBuilding.cshtml" />
     <Content Include="Views\WorkList\CreateWorkList.cshtml" />
     <Content Include="Views\WorkList\EditWorkList.cshtml" />
+    <Content Include="Views\PrintList\PrintPayWork.cshtml" />
+    <Content Include="Views\PrintList\PrintPayDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
