--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -179,20 +179,33 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\Api\ApiController.cs" />
-    <Compile Include="Controllers\Api\EmployeeController.cs" />
+    <Compile Include="REST\Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\EmpSalController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OwnerController.cs" />
     <Compile Include="Controllers\OwnerPayController.cs" />
     <Compile Include="Controllers\PrintListController.cs" />
+    <Compile Include="REST\Controllers\InsCateController.cs" />
+    <Compile Include="REST\Controllers\InsController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\WorkCareController.cs" />
     <Compile Include="Controllers\WorkListController.cs" />
     <Compile Include="DAL\ManpowerDBEntitiesEditor.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Emp.cs" />
+    <Compile Include="REST\Models\EmpInsurance.cs" />
+    <Compile Include="REST\Models\InsCate.cs" />
+    <Compile Include="REST\Models\Owner.cs" />
+    <Compile Include="REST\Models\OwnerBuilding.cs" />
+    <Compile Include="REST\Models\OwnerPayment.cs" />
+    <Compile Include="REST\Models\OwnerPayWork.cs" />
+    <Compile Include="REST\Models\WorkCategory.cs" />
+    <Compile Include="REST\Models\Worker.cs" />
+    <Compile Include="REST\Models\WorkList.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="REST\Models\Emp.cs" />
     <Compile Include="Models\EmpInsurance.cs">
       <DependentUpon>Model1.tt</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -252,6 +265,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="REST\ViewModels\ViewEmp.cs" />
     <Compile Include="ViewModels\ViewEmpIns.cs" />
     <Compile Include="ViewModels\ViewEmpSal.cs" />
     <Compile Include="ViewModels\ViewEmpSalDetail.cs" />
@@ -613,6 +627,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Api\" />
+    <Folder Include="Views\InsCate\" />
+    <Folder Include="Views\Ins\" />
+    <Folder Include="Views\User\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
