--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -195,17 +195,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="REST\Models\EmpInsurance.cs" />
-    <Compile Include="REST\Models\InsCate.cs" />
-    <Compile Include="REST\Models\Owner.cs" />
-    <Compile Include="REST\Models\OwnerBuilding.cs" />
-    <Compile Include="REST\Models\OwnerPayment.cs" />
-    <Compile Include="REST\Models\OwnerPayWork.cs" />
-    <Compile Include="REST\Models\WorkCategory.cs" />
-    <Compile Include="REST\Models\Worker.cs" />
-    <Compile Include="REST\Models\WorkList.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="REST\Models\Emp.cs" />
     <Compile Include="Models\EmpInsurance.cs">
       <DependentUpon>Model1.tt</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -265,7 +255,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="REST\ViewModels\ViewEmp.cs" />
     <Compile Include="ViewModels\ViewEmpIns.cs" />
     <Compile Include="ViewModels\ViewEmpSal.cs" />
     <Compile Include="ViewModels\ViewEmpSalDetail.cs" />
@@ -473,7 +462,9 @@
     <Content Include="Content\js\DataTables\KeyTable\dataTables.keyTable.min.js" />
     <Content Include="Content\js\DataTables\Select\dataTables.select.js" />
     <Content Include="Content\js\DataTables\Select\dataTables.select.min.js" />
+    <Content Include="Content\js\date.f-0.5.0.js" />
     <Content Include="Content\js\init.js" />
+    <Content Include="Content\js\json4ms.js" />
     <Content Include="Content\js\jquery-1.12.4.js" />
     <Content Include="Content\js\jquery.dataTables.min.js" />
     <Content Include="Content\js\plugins\bootstrap\bootstrap.js" />
@@ -615,6 +606,7 @@
     <Content Include="Views\WorkCare\Print.cshtml" />
     <Content Include="Views\Owner\Print.cshtml" />
     <Content Include="Views\Home\a02.cshtml" />
+    <Content Include="Views\Home\a03.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
