--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -468,6 +468,7 @@
     <Content Include="Content\js\json4ms.js" />
     <Content Include="Content\js\jquery-1.12.4.js" />
     <Content Include="Content\js\jquery.dataTables.min.js" />
+    <Content Include="Content\js\modalForm.js" />
     <Content Include="Content\js\plugins\bootstrap\bootstrap.js" />
     <Content Include="Content\js\plugins\bootstrap\bootstrap.min.js" />
     <Content Include="Content\js\plugins\datepicker\bootstrap-datepicker.js" />
