簡易登入系統

--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -586,6 +586,7 @@
     <Content Include="Views\WorkCare\Print.cshtml" />
     <Content Include="Views\Owner\Print.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\User\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -597,7 +598,6 @@
     <Folder Include="Views\Api\" />
     <Folder Include="Views\InsCate\" />
     <Folder Include="Views\Ins\" />
-    <Folder Include="Views\User\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
