--- a/Manpower_MVC/Manpower_MVC.csproj
+++ b/Manpower_MVC/Manpower_MVC.csproj
@@ -274,10 +274,6 @@
     <Compile Include="ViewModels\ViewWorkList.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\ManpowerDB.mdf" />
-    <Content Include="App_Data\ManpowerDB_log.ldf">
-      <DependentUpon>ManpowerDB.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\AdminLTE.css" />
@@ -595,6 +591,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Views\Api\" />
     <Folder Include="Views\InsCate\" />
     <Folder Include="Views\Ins\" />
