--- a/Manpower_MVC/Web.config
+++ b/Manpower_MVC/Web.config
@@ -86,9 +86,11 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+    <!--
     <add name="ManpowerDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.11.12;initial catalog=ManpowerDB;persist security info=True;user id=sa;password=Vv25680117;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ManpowerDBEntitiesEditor" connectionString="Data Source=192.168.11.12;Initial Catalog=ManpowerDB;Persist Security Info=True;User ID=sa;Password=Vv25680117" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    -->
+  <add name="ManpowerDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Database2.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <!--
 		exposeAllRoutes: Sets whether to expose all routes to the site. 
 		If true, all routes will be exposed unless explicitly hidden using the [HideRoutesInJavaScript] 
